--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,19 @@
   <name>BulletinBoard Core System</name>
   
   <dependencies>
+  
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.10</version>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.12.6</version>
+  	</dependency>
+  	
   </dependencies>
   
 </project>
