--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
   		<version>1.12.6</version>
   	</dependency>
   	
+  	<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>1.1.0.Final</version>
+  	</dependency>
+  	
   </dependencies>
   
 </project>
